--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "bin": {
     "store": "lib/cli.js"
   },
-  "files": ["lib"],
-  "engines" : { "node" : "~0.12" },
+  "files": [
+    "lib"
+  ],
+  "engines": {
+    "node": "~0.12"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/k-kinzal/npm-store.git"
@@ -37,10 +41,10 @@
   },
   "devDependencies": {
     "babel": "^5.5.4",
-    "espower-loader": "^0.11.0",
-    "intelli-espower-loader": "^0.7.0",
+    "espower-loader": "^1.0.0",
+    "intelli-espower-loader": "^1.0.0",
     "mocha": "^2.2.5",
-    "power-assert": "^0.11.0",
+    "power-assert": "^1.0.0",
     "source-map-support": "^0.3.1"
   }
 }
